# system

./: .gitignore
hw-1/: CMakeLists.txt  list_files.c
hw2/: CMakeLists.txt  file_locking.c  lagrange.c  lagrange.h  main.c  signal_handler.c  signal_handler.h
hw3/: CMakeLists.txt  globals.h  main.c  makefile  readme.md  usage.c  usage.h
hw3/latex/: main.md.backup  main.tex
hw3/src/: main.c  usage.h
hw4/: CMakeLists.txt  data.c  data.h  homeworks.txt  main.c  main.h  queue.c  queue.h  sort.c  students.txt
hw4/lib/: queue.h  sort.h
hw4/src/: data.c  main.c  queue.c  sort.c
midterm_project/: file_locking.h  main.c  makefile  signal_handler.c  signal_handler.h
midterm_project/src/: common.h  main.c  signal_handler.c  signal_handler.h
midterm_project/tex/: main.tex
